# 31251-aut2025

./: .editorconfig  .gitignore
week_01/: meson.build  week_01_slides.html  week_01_slides.org
week_01/01_hello_world/: hello_world.cpp
week_01/02_read_input/: read  read_input.cpp
week_01/03_add_input/: add  add.cpp
week_01/04_factorial/: Makefile  factorial.cpp  main.cpp  tests.cpp
week_01/05_passby/: passby.cpp
week_02/: slides.org
week_02/00_my_int/: .clang-format  Makefile  my_int.cpp  my_int.hpp  my_int.hpp.gch  tests.cpp  tests.out
week_02/01_c_arrays/: Makefile  dynamic_arr.cpp  dynamic_arr.out  dynamic_arr_plus.cpp  dynamic_arr_plus.out  errors.cpp  static_arr.cpp  static_arr.out
week_02/02_vec_playground/: main.cpp  playground.out
week_02/03_prod_array/: Makefile  array_product.hpp  tests.cpp
week_02/04_factorial/: Makefile
week_02/05_passby/: main.cpp
week_03/: slides.org
week_05/: slides.org
week_05/01_two_sum/: Makefile  debug_log.hpp  two_sum.cpp  two_sum.hpp
week_05/02_vec_playground/: Makefile
week_05/03_prod_array/: array_product.cpp
week_05/03_stack_implementation/: .clang-format  Makefile  debug_log.hpp  main.cpp  myStack.cpp
week_05/04_my_vec/: .clang-format  Makefile  my_vector.cpp  my_vector.hpp  tests.cpp
week_10/: week_10.org
week_10/00_stack_calculator/: rpn.cpp  rpn.hpp  tests.cpp
week_10/01_graphs/: Makefile  adjacency_list.cpp  adjacency_list.hpp  edge_list.hpp  graph.hpp  main.cpp
week_11/01_grid_graph/: Makefile  grid_graph.cpp  grid_graph.hpp
